Add new models for Exports and fix CallResult (#75)
* Add new models for Exports and fix CallResult

* Use openapi spec within api directory
