# src/freeclimb/Enums/ExportResourceType.cs
@@ -1,0 +1,89 @@
+/*
+ * FreeClimb API
+ *
+ * FreeClimb is a cloud-based application programming interface (API) that puts the power of the Vail platform in your hands. FreeClimb simplifies the process of creating applications that can use a full range of telephony features without requiring specialized or on-site telephony equipment. Using the FreeClimb REST API to write applications is easy! You have the option to use the language of your choice or hit the API directly. Your application can execute a command by issuing a RESTful request to the FreeClimb API. The base URL to send HTTP requests to the FreeClimb REST API is: /apiserver. FreeClimb authenticates and processes your request.
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * Contact: support@freeclimb.com
+ * Generated by: https://github.com/openapitools/openapi-generator.git
+ */
+
+
+using System;
+using System.Collections;
+using System.Collections.Generic;
+using System.Collections.ObjectModel;
+using System.ComponentModel.DataAnnotations;
+using System.IO;
+using System.Linq;
+using System.Runtime.Serialization;
+using System.Text;
+using System.Text.RegularExpressions;
+using freeclimb.Enums;
+using Newtonsoft.Json;
+using Newtonsoft.Json.Converters;
+using Newtonsoft.Json.Linq;
+using OpenAPIDateConverter = freeclimb.Client.OpenAPIDateConverter;
+
+namespace freeclimb.Enums
+{
+    /// <summary>
+    /// platform resource type
+    /// </summary>
+    /// <value>platform resource type</value>
+    [JsonConverter(typeof(StringEnumConverter))]
+    public enum ExportResourceType
+    {
+        /// <summary>
+        /// Enum MESSAGES for value: Messages
+        /// </summary>
+        [EnumMember(Value = "Messages")]
+        MESSAGES = 1,
+
+        /// <summary>
+        /// Enum CALLS for value: Calls
+        /// </summary>
+        [EnumMember(Value = "Calls")]
+        CALLS = 2,
+    }
+
+    /// <summary>
+    /// Converts <see cref="ExportResourceType"/> to and from the JSON value
+    /// </summary>
+    public static class ExportResourceTypeValueConverter
+    {
+        /// <summary>
+        /// Parses a given value to <see cref="ExportResourceType"/>
+        /// </summary>
+        /// <param name="value"></param>
+        /// <returns></returns>
+        public static ExportResourceType FromString(string value)
+        {
+            if (value.Equals("Messages"))
+                return ExportResourceType.MESSAGES;
+
+            if (value.Equals("Calls"))
+                return ExportResourceType.CALLS;
+
+            throw new NotImplementedException(
+                $"Could not convert value to type ExportResourceType: '{value}'"
+            );
+        }
+
+        /// <summary>
+        /// Parses a given value to <see cref="ExportResourceType"/>
+        /// </summary>
+        /// <param name="value"></param>
+        /// <returns></returns>
+        public static ExportResourceType? FromStringOrDefault(string value)
+        {
+            if (value.Equals("Messages"))
+                return ExportResourceType.MESSAGES;
+
+            if (value.Equals("Calls"))
+                return ExportResourceType.CALLS;
+
+            return null;
+        }
+    }
+}
